--- a/form/form.xml
+++ b/form/form.xml
@@ -3,19 +3,20 @@
     <h:title>Formulir Surat Keterangan Mahasiswa</h:title>
     <model>
       <instance>
-        <data id="build_Formulir-Surat-Keterangan-Mahasiswa_1458546410">
+        <data id="build_Formulir-Surat-Keterangan-Mahasiswa_1460283183">
           <meta>
             <instanceID/>
           </meta>
-          <nama/>
+          <nrp/>
           <ttl/>
           <TanggalLahir/>
           <nohp/>
           <alamat/>
+          <email/>
           <namaortu/>
           <pekerjaanOrtu/>
           <alamatOrtu/>
-          <nrp/>
+          <nomorHpOrtu/>
           <masaStudi/>
           <statusmhs/>
           <tahap/>
@@ -24,11 +25,8 @@
       </instance>
       <itext>
         <translation lang="eng">
-          <text id="/data/nama:label">
-            <value>Nama :</value>
-          </text>
-          <text id="/data/nama:hint">
-            <value>Andre</value>
+          <text id="/data/nrp:label">
+            <value>NRP :</value>
           </text>
           <text id="/data/ttl:label">
             <value>Tempat Lahir :</value>
@@ -51,20 +49,44 @@
           <text id="/data/alamat:hint">
             <value></value>
           </text>
+          <text id="/data/email:label">
+            <value>Email Mahasiswa :</value>
+          </text>
           <text id="/data/namaortu:label">
             <value>Nama Orang Tua / Wali :</value>
           </text>
           <text id="/data/pekerjaanOrtu:label">
-            <value>Pekerjaan Orang Tua / Wali :</value>
+            <value>Pekerjaan Orang Tua :</value>
+          </text>
+          <text id="/data/pekerjaanOrtu:option0">
+            <value>PNS</value>
+          </text>
+          <text id="/data/pekerjaanOrtu:option1">
+            <value>Wiraswasta</value>
+          </text>
+          <text id="/data/pekerjaanOrtu:option2">
+            <value>TNI AD</value>
+          </text>
+          <text id="/data/pekerjaanOrtu:option3">
+            <value>TNI AU</value>
+          </text>
+          <text id="/data/pekerjaanOrtu:option4">
+            <value>TNI AL</value>
+          </text>
+          <text id="/data/pekerjaanOrtu:option5">
+            <value>Karyawan BUMN</value>
+          </text>
+          <text id="/data/pekerjaanOrtu:option6">
+            <value>Karyawan Swasta</value>
           </text>
           <text id="/data/alamatOrtu:label">
             <value>Alamat Orang Tua / Wali :</value>
           </text>
-          <text id="/data/nrp:label">
-            <value>NRP :</value>
+          <text id="/data/nomorHpOrtu:label">
+            <value>Nomor HP Orang Tua / Wali :</value>
           </text>
           <text id="/data/masaStudi:label">
-            <value>Masa Studi :</value>
+            <value>Masa Studi (Semester) :</value>
           </text>
           <text id="/data/statusmhs:label">
             <value>Status Mahasiswa :</value>
@@ -90,25 +112,25 @@
         </translation>
       </itext>
       <bind nodeset="/data/meta/instanceID" type="string" readonly="true()" calculate="concat('uuid:', uuid())"/>
-      <bind nodeset="/data/nama" type="string" required="true()" constraint="(regex(., &quot;^.{1,20}$&quot;))" jr:constraintMsg="Response length must be between 1 and 20"/>
+      <bind nodeset="/data/nrp" type="string" required="true()" constraint="(regex(., '^(52)[0-9]{8,8}$'))" jr:constraintMsg="Response length must be between 10 and 10"/>
       <bind nodeset="/data/ttl" type="string" required="true()" constraint="(regex(., &quot;^.{5,50}$&quot;))" jr:constraintMsg="Response length must be between 5 and 50"/>
-      <bind nodeset="/data/TanggalLahir" type="date"/>
-      <bind nodeset="/data/nohp" type="string" constraint="(regex(., &quot;^.{9,12}$&quot;))" jr:constraintMsg="Response length must be between 9 and 12"/>
+      <bind nodeset="/data/TanggalLahir" type="date" required="true()"/>
+      <bind nodeset="/data/nohp" type="string" required="true()" constraint="(regex(., '^(08)[0-9]{8,10}$'))" jr:constraintMsg="Response length must be between 9 and 12"/>
       <bind nodeset="/data/alamat" type="string" required="true()" constraint="(regex(., &quot;^.{5,50}$&quot;))" jr:constraintMsg="Response length must be between 5 and 50"/>
+      <bind nodeset="/data/email" type="string" required="true()" constraint="(regex(., &quot;^.{1,50}$&quot;))" jr:constraintMsg="Response length must be between 1 and 50"/>
       <bind nodeset="/data/namaortu" type="string" required="true()" constraint="(regex(., &quot;^.{1,20}$&quot;))" jr:constraintMsg="Response length must be between 1 and 20"/>
-      <bind nodeset="/data/pekerjaanOrtu" type="string" required="true()" constraint="(regex(., &quot;^.{1,30}$&quot;))" jr:constraintMsg="Response length must be between 1 and 30"/>
-      <bind nodeset="/data/alamatOrtu" type="string" constraint="(regex(., &quot;^.{1,50}$&quot;))" jr:constraintMsg="Response length must be between 1 and 50"/>
-      <bind nodeset="/data/nrp" type="string" required="true()" constraint="(regex(., &quot;^.{10,10}$&quot;))" jr:constraintMsg="Response length must be between 10 and 10"/>
-      <bind nodeset="/data/masaStudi" type="int" constraint="(. &gt; '1' and . &lt; '14')" jr:constraintMsg="Value must be between 1 and 14"/>
-      <bind nodeset="/data/statusmhs" type="select1"/>
-      <bind nodeset="/data/tahap" type="select1"/>
+      <bind nodeset="/data/pekerjaanOrtu" type="select1" required="true()"/>
+      <bind nodeset="/data/alamatOrtu" type="string" required="true()" constraint="(regex(., &quot;^.{1,50}$&quot;))" jr:constraintMsg="Response length must be between 1 and 50"/>
+      <bind nodeset="/data/nomorHpOrtu" type="string" required="true()" constraint="(regex(., '^(08)[0-9]{8,10}$'))" jr:constraintMsg="Response length must be between 10 and 12"/>
+      <bind nodeset="/data/masaStudi" type="int" required="true()" constraint="(. &gt; '1' and . &lt; '14')" jr:constraintMsg="Value must be between 1 and 14"/>
+      <bind nodeset="/data/statusmhs" type="select1" required="true()"/>
+      <bind nodeset="/data/tahap" type="select1" required="true()"/>
       <bind nodeset="/data/keperluan" type="string" required="true()"/>
     </model>
   </h:head>
   <h:body>
-    <input ref="/data/nama">
-      <label ref="jr:itext('/data/nama:label')"/>
-      <hint ref="jr:itext('/data/nama:hint')"/>
+    <input ref="/data/nrp">
+      <label ref="jr:itext('/data/nrp:label')"/>
     </input>
     <input ref="/data/ttl">
       <label ref="jr:itext('/data/ttl:label')"/>
@@ -125,17 +147,48 @@
       <label ref="jr:itext('/data/alamat:label')"/>
       <hint ref="jr:itext('/data/alamat:hint')"/>
     </input>
+    <input ref="/data/email">
+      <label ref="jr:itext('/data/email:label')"/>
+    </input>
     <input ref="/data/namaortu">
       <label ref="jr:itext('/data/namaortu:label')"/>
     </input>
-    <input ref="/data/pekerjaanOrtu">
+    <select1 ref="/data/pekerjaanOrtu">
       <label ref="jr:itext('/data/pekerjaanOrtu:label')"/>
-    </input>
+      <item>
+        <label ref="jr:itext('/data/pekerjaanOrtu:option0')"/>
+        <value>PNS</value>
+      </item>
+      <item>
+        <label ref="jr:itext('/data/pekerjaanOrtu:option1')"/>
+        <value>Wiraswasta</value>
+      </item>
+      <item>
+        <label ref="jr:itext('/data/pekerjaanOrtu:option2')"/>
+        <value>TNI AD</value>
+      </item>
+      <item>
+        <label ref="jr:itext('/data/pekerjaanOrtu:option3')"/>
+        <value>TNI AU</value>
+      </item>
+      <item>
+        <label ref="jr:itext('/data/pekerjaanOrtu:option4')"/>
+        <value>TNI AL</value>
+      </item>
+      <item>
+        <label ref="jr:itext('/data/pekerjaanOrtu:option5')"/>
+        <value>Karyawan BUMN</value>
+      </item>
+      <item>
+        <label ref="jr:itext('/data/pekerjaanOrtu:option6')"/>
+        <value>Karyawan Swasta</value>
+      </item>
+    </select1>
     <input ref="/data/alamatOrtu">
       <label ref="jr:itext('/data/alamatOrtu:label')"/>
     </input>
-    <input ref="/data/nrp">
-      <label ref="jr:itext('/data/nrp:label')"/>
+    <input ref="/data/nomorHpOrtu">
+      <label ref="jr:itext('/data/nomorHpOrtu:label')"/>
     </input>
     <input ref="/data/masaStudi">
       <label ref="jr:itext('/data/masaStudi:label')"/>
